# learn-scotty-bulletin-app

./: LICENSE  readme.md  scotty-bulletin-app.cabal  stack.yaml  twain-bulletin-app.cabal
src/: Bulletin.hs
