name:                scotty-bulletin-app
version:             0.1.0.0
synopsis:            A simple bulletin board web app using scotty
description:         Please see readme.md
homepage:            https://github.com/soupi/learn-scotty-bulletin-app
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2020 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

library
  hs-source-dirs:      src
  exposed-modules:     Bulletin

  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty

executable bulletin-app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , scotty-bulletin-app

